--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,17 @@
     </style>
 </head>
 <body>
-    <div class="wrapper">
+    <h1>Hello World!</h1>
+    <!-- <div class="wrapper">
         <div class="box a">A</div>
         <div class="box b">B</div>
         <div class="box c">C</div>
         <div class="box d">D</div>
         <div class="box e">E</div>
         <div class="box f">F</div>
-      </div>
+      </div> -->
 </body>
 <script>
-    alert('OK!');
+    // alert('OK!');
 </script>
 </html>
